--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -108,6 +108,7 @@
     z-index: 0;
     transform: translateX(100%);
     transition: transform 0.2s ease-in;
+    overflow-y: scroll;
 }
 
 .header__burger-menu-close-button {
