--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -1,5 +1,4 @@
 .search {
-    width: calc(100% - 70px * 2);
     margin: auto;
     display: flex;
     border-bottom: 1px solid #e8e8e8;
@@ -12,6 +11,7 @@
 
 .search__form {
     display: flex;
+    justify-content: space-between;
     align-items: center;
     width: 100%;
     background: #ffffff;
@@ -33,7 +33,6 @@
 
 .search__form-input {
     border: none;
-    width: 746px;
     height: 100%;
 }
 
@@ -91,17 +90,17 @@
     line-height: 18px;
     margin: 0 30px 0 0;
 }
+.search__films{
+    display: flex;
+}
+.search__box{
+    align-items: center;
+    display: flex;
+}
 @media screen and (max-width: 1279px) {
     .search {
-        width: 708px;
         padding: 80px 30px 120px 30px;
         margin: 0;
-    }
-    .search__form {
-        width: 708px;
-    }
-    .search__form-input {
-        width: 320px;
     }
     .search__toggle-box {
         margin-left: 0;
@@ -109,7 +108,6 @@
 }
 @media screen and (max-width: 767px) {
     .search {
-        max-width: 300px;
         padding: 80px 10px 92px 10px;
     }
     .search__form {
