--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -1,27 +1,36 @@
 .login {
-    width: calc(100% - 442px*2);
-    padding: 70px 0;
-    margin: auto;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
+  width: 396px;
+  padding: 70px 0;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
 }
 
-.login__fields {
-    margin-bottom: 155px;
+.login__server-error {
+  margin: 163px 0 20px;
+  text-align: center;
+  margin-bottom: 20px;
+  font-weight: normal;
+  font-size: 11px;
+  line-height: 13px;
+  color: #FF3055;
+  min-height: 14px;
 }
 
-@media(max-width: 1279px) {
-    .login {
-        width: 396px;
-    }
+@media screen and (max-width: 768px) {
+  .login {
+    padding: 232px 0;
+  }
 }
 
-@media(max-width: 767px) {
-    .login {
-        width: 260px;
-    }
-    .logo{
-        margin: 0 auto;
-    }
+@media screen and (max-width: 425px) {
+  .login {
+    width: calc(100% - 60px);
+    padding: 232px 0;
+    padding: 56px 0 30px;
+  }
+
+  .login__server-error {
+    margin: 275px 0 20px;
+  }
 }
