--- a/src/components/FilterCheckbox/FilterCheckbox.css
+++ b/src/components/FilterCheckbox/FilterCheckbox.css
@@ -11,7 +11,7 @@
 }
 
 .search__toggle_visible {
-    background: url('../../images/toggle-off.svg') right no-repeat;
+    background: url('../../images/toggle_off.svg') right no-repeat;
     background-position: 20% 50%;
     background-color: #A0A0A0;
     border-radius: 20px;
@@ -27,13 +27,34 @@
 }
 
 .search__toggle:checked + .search__toggle_visible {
-    background: url('../../images/toggle-off.svg') right no-repeat;
+    background: url('../../images/toggle.svg') right no-repeat;
     background-position: 80% 50%;
     background-color: #2BE080;
 }
 
 .search__toggle:disabled + .search__toggle_visible {
-    background: url('../../images/toggle-off.svg');
+    background: url('../../images/toggle_off.svg');
     background-position: 20% 50%;
     background-color: #EBEBEB;
+}
+
+@media(max-width: 920px) {
+    .search__toggle-label {
+        margin: 0 15px 0 19px;
+    }
+}
+
+@media(max-width: 720px) {
+    .search__toggle-box {
+        width: 100%;
+        display: flex;
+        position: absolute;
+        justify-content: center;
+        left: 0;
+        bottom: 44px;
+    }
+
+    .search__toggle-label {
+        margin: 0 13px 0 0;
+    }
 }
