--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -1,172 +1,177 @@
 .profile {
-    width: calc(100% - 70px*2);
-    margin: auto;
-    padding: 74px 0 70px 0;
-    display: flex;
-    flex-direction: column;
+  width: calc(100% - 70px*2);
+  margin: auto;
+  padding: 74px 0 70px 0;
+  display: flex;
+  flex-direction: column;
 }
 
 .profile__title {
-    font-style: normal;
-    font-weight: 500;
-    font-size: 24px;
-    line-height: 29px;
-    text-align: center;
-    margin: 0 0 123px 0;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 29px;
+  text-align: center;
+  margin: 0 0 123px 0;
 }
 
 .profile__form {
-    width: calc(100% - (435px - 70px)*2);
-    margin: auto;
-    display: flex;
-    flex-direction: column;
+  width: calc(100% - (435px - 70px)*2);
+  margin: auto;
+  display: flex;
+  flex-direction: column;
 }
 
 .profile__fields {
-    border: none;
-    padding: 0;
-    margin-bottom: 204px;
+  border: none;
+  padding: 0;
+  margin-bottom: 204px;
 }
 
 .profile__form-input {
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    padding-bottom: 16px;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  padding-bottom: 16px;
 }
 
 .profile__form-input:not(:last-child) {
-    border-bottom: 1px solid #E8E8E8;
-    margin-bottom: 17px;
+  border-bottom: 1px solid #E8E8E8;
+  margin-bottom: 17px;
 }
 
 .profile__form-input-name {
-    font-style: normal;
-    font-weight: 500;
-    font-size: 11px;
-    line-height: 13px;
-    margin: 0;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 11px;
+  line-height: 13px;
+  margin: 0;
 }
 
 .profile__form-input-field {
-    border: none;
-    background: white;
-    outline: none;
-    font-size: 11px;
-    line-height: 13px;
-    text-align: right;
-    color: #000000;
-    width: 50%;
-    height: 90%;
+  border: none;
+  background: white;
+  outline: none;
+  font-size: 11px;
+  line-height: 13px;
+  text-align: right;
+  color: #000000;
+  width: 50%;
+  height: 90%;
 }
 
 .profile__form-input-field::placeholder {
-    font-size: 11px;
-    line-height: 13px;
-    text-align: right;
-    color: #000000;
-    padding: 4px;
+  font-size: 11px;
+  line-height: 13px;
+  text-align: right;
+  color: #000000;
+  padding: 4px;
 }
 
 .profile__form-input-field:focus {
-    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);;
+  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);;
 }
 
 .profile__button {
-    font-style: normal;
-    font-weight: normal;
-    font-size: 13px;
-    line-height: 16px;
-    border: none;
-    outline: none;
-    padding: 0;
-    align-self: center;
-    margin-bottom: 9px;
-    padding: 9px 15px;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 13px;
+  line-height: 16px;
+  border: none;
+  outline: none;
+  padding: 0;
+  align-self: center;
+  margin-bottom: 9px;
+  padding: 9px 15px;
 }
 
 .profile__button_type_edit {
-    background: #FAFAFA;
-    transition: opacity 0.3s;
+  background: #FAFAFA;
+  transition: opacity 0.3s;
+}
+
+.profile__button_type_edit:disabled{
+  opacity: 0.3;
+  color: #424242;
 }
 
 .profile__button_type_edit:hover {
-    cursor: pointer;
-    opacity: 0.7;
+  cursor: pointer;
+  opacity: 0.7;
 }
 
 .profile__form-error {
-    font-style: normal;
-    font-weight: normal;
-    font-size: 11px;
-    line-height: 13px;
-    text-align: center;
-    color: #FF004C;
-    margin-bottom: 20px;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 11px;
+  line-height: 13px;
+  text-align: center;
+  color: #FF004C;
+  margin-bottom: 20px;
 }
 
 .profile__button_type_save {
-    width: 100%;
-    height: 45px;
-    background: #3456F3;
-    border-radius: 3px;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 17px;
-    text-align: center;
+  width: 100%;
+  height: 45px;
+  background: #3456F3;
+  border-radius: 3px;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 17px;
+  text-align: center;
 
-    color: #FFFFFF;
-    transition: opacity 0.3s ease-in-out;
+  color: #FFFFFF;
+  transition: opacity 0.3s ease-in-out;
 }
 
 .profile__button_type_save:hover {
-    cursor: pointer;
-    opacity: 0.8;
+  cursor: pointer;
+  opacity: 0.8;
 }
 
 .profile__button_type_save_disabled {
-    background: #F8F8F8;
-    color: #C2C2C2;
+  background: #F8F8F8;
+  color: #C2C2C2;
 }
 
 .profile__signout-link {
-    text-decoration: none;
-    font-weight: 500;
-    font-size: 13px;
-    line-height: 16px;
-    color: #EE3465;
-    align-self: center;
-    transition: opacity 0.3s;
+  text-decoration: none;
+  font-weight: 500;
+  font-size: 13px;
+  line-height: 16px;
+  color: #EE3465;
+  align-self: center;
+  transition: opacity 0.3s;
 }
 
 .profile__signout-link:hover {
-    cursor: pointer;
-    opacity: 0.7;
+  cursor: pointer;
+  opacity: 0.7;
 }
 @media screen and (max-width: 1279px) {
-    .profile__form{
-        width: 410px;
-    }
-    .profile__title{
-        margin-bottom: 96px;
-    }
-    .profile__fields{
-        margin-bottom: 96px;
-    }
-    
+  .profile__form{
+      width: 410px;
+  }
+  .profile__title{
+      margin-bottom: 96px;
+  }
+  .profile__fields{
+      margin-bottom: 96px;
+  }
+  
 }
 @media screen and (max-width: 767px) {
-    .profile__form{
-        width: 260px;
-    }
-    .profile{
-        width: 320px;
-    }
-    .profile__title{
-        margin-bottom: 80px;
-    }
-    .profile__fields{
-        margin-bottom: 363px;
-    }
+  .profile__form{
+      width: 260px;
+  }
+  .profile{
+      width: 320px;
+  }
+  .profile__title{
+      margin-bottom: 80px;
+  }
+  .profile__fields{
+      margin-bottom: 363px;
+  }
 }
