--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -1,137 +1,209 @@
 .search {
-    margin: auto;
-    display: flex;
-    border-bottom: 1px solid #e8e8e8;
-    padding: 70px 0 70px 0;
+  margin: auto;
+  display: flex;
+  border-bottom: 1px solid #e8e8e8;
+  padding: 70px 0 70px 0;
 }
 
 .search__icon {
-    margin: 0 16px 0 25px;
+  margin: 0 16px 0 25px;
 }
 
 .search__form {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    background: #ffffff;
-    height: 72px;
-    box-shadow: 0px 3px 14px rgba(0, 0, 0, 0.08);
-    border-radius: 9px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  background: #ffffff;
+  height: 72px;
+  box-shadow: 0px 3px 14px rgba(0, 0, 0, 0.08);
+  border-radius: 9px;
+}
+.search__form-error{
+  position: absolute;
+  top: 250px;
+    margin-top: 100px;
+    font-weight: 400;
+    font-size: 10px;
+    line-height: 12px;
+    min-height: 12px;
+    margin: 6px 0;
+    display: block;
+    color: #ff3055;
 }
 
 .search__form-fields {
-    border: none;
-    padding: 0;
-    align-items: center;
+  border: none;
+  padding: 0;
+  align-items: center;
 }
 
 .search__form-fields {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 
 .search__form-input {
-    border: none;
-    height: 100%;
+  border: none;
+  height: 100%;
 }
 
 .search__form-input::placeholder {
-    font-style: normal;
-    font-weight: normal;
-    font-size: 18px;
-    line-height: 20px;
-    color: #a0a0a0;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 20px;
+  color: #a0a0a0;
 }
 
 .search__form-input:focus {
-    outline-color: #3456f3;
+  outline-color: #3456f3;
 }
 
 .search__form-button {
-    background-color: #3456f3;
-    border: none;
-    outline: none;
-    width: 59px;
-    height: 34px;
-    border-radius: 48px;
-    margin-right: 19px;
-    padding: 0;
-    transition: opacity 0.3s ease-in-out;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 11px;
-    line-height: 18px;
-    /* identical to box height, or 164% */
+  background-color: #3456f3;
+  border: none;
+  outline: none;
+  width: 59px;
+  height: 34px;
+  border-radius: 48px;
+  margin-right: 19px;
+  padding: 0;
+  transition: opacity 0.3s ease-in-out;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 11px;
+  line-height: 18px;
+  /* identical to box height, or 164% */
 
-    text-align: center;
+  text-align: center;
 
-    color: #ffffff;
+  color: #ffffff;
 }
 
 .search__form-button:hover {
-    cursor: pointer;
-    opacity: 0.8;
+  cursor: pointer;
+  opacity: 0.8;
 }
 
 .search__toggle-border {
-    border: 1px solid #cbcbcb;
-    height: 40px;
+  border: 1px solid #cbcbcb;
+  height: 40px;
 }
 
 .search__toggle-box {
-    display: flex;
+  display: flex;
 }
 
 .search__toggle-text {
-    font-style: normal;
-    font-weight: normal;
-    font-size: 13px;
-    line-height: 18px;
-    margin: 0 30px 0 0;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 13px;
+  line-height: 18px;
+  margin: 0 30px 0 0;
 }
 .search__films{
-    display: flex;
+  display: flex;
 }
 .search__box{
-    align-items: center;
-    display: flex;
+  align-items: center;
+  display: flex;
+}
+.search__toggle-label {
+  margin: 0 14px 0 29px;
+}
+
+.search__toggle {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+}
+
+.search__toggle_visible {
+  background: url('../../images/toggle_off.svg') right no-repeat;
+  background-position: 20% 50%;
+  background-color: #A0A0A0;
+  border-radius: 20px;
+  display: inline-block;
+  vertical-align: middle;
+  width: 36px;
+  height: 20px;
+  transition: background-position 0.3s, background-color 0.3s;
+}
+
+.search__toggle_visible {
+  cursor: pointer;
+}
+
+.search__toggle:checked + .search__toggle_visible {
+  background: url('../../images/toggle.svg') right no-repeat;
+  background-position: 80% 50%;
+  background-color: #2BE080;
+}
+
+.search__toggle:disabled + .search__toggle_visible {
+  background: url('../../images/toggle_off.svg');
+  background-position: 20% 50%;
+  background-color: #EBEBEB;
+}
+
+@media(max-width: 920px) {
+  .search__toggle-label {
+      margin: 0 15px 0 19px;
+  }
+}
+
+@media(max-width: 720px) {
+  .search__toggle-box {
+      width: 100%;
+      display: flex;
+      position: absolute;
+      justify-content: center;
+      left: 0;
+      bottom: 44px;
+  }
+
+  .search__toggle-label {
+      margin: 0 13px 0 0;
+  }
 }
 @media screen and (max-width: 1279px) {
-    .search {
-        padding: 80px 30px 120px 30px;
-        margin: 0;
-    }
-    .search__toggle-box {
-        margin-left: 0;
-    }
+  .search {
+      padding: 80px 30px 120px 30px;
+      margin: 0;
+  }
+  .search__toggle-box {
+      margin-left: 0;
+  }
 }
 @media screen and (max-width: 767px) {
-    .search {
-        padding: 80px 10px 92px 10px;
-    }
-    .search__form {
-        position: relative;
-    }
-    .search__form-input {
-        max-width: 182px;
-        padding-left: 19px;
-    }
-    .search__toggle-box {
-        width: 100%;
-        display: flex;
-        position: absolute;
-        justify-content: center;
-        left: 0;
-        top: 116px;
-    }
-    .search__toggle-border {
-        display: none;
-    }
-    .search__icon {
-        display: none;
-    }
-    .search__form-button {
-        margin-left: 10px;
-    }
+  .search {
+      padding: 80px 10px 92px 10px;
+  }
+  .search__form {
+      position: relative;
+  }
+  .search__form-input {
+      max-width: 182px;
+      padding-left: 19px;
+  }
+  .search__toggle-box {
+      width: 100%;
+      display: flex;
+      position: absolute;
+      justify-content: center;
+      left: 0;
+      top: 116px;
+  }
+  .search__toggle-border {
+      display: none;
+  }
+  .search__icon {
+      display: none;
+  }
+  .search__form-button {
+      margin-left: 10px;
+  }
 }
