--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -149,6 +149,20 @@
   cursor: pointer;
   opacity: 0.7;
 }
+.profile__respons {
+  margin: 170px 0 20px;
+  text-align: center;
+  margin-bottom: 20px;
+  font-weight: normal;
+  font-size: 11px;
+  line-height: 13px;
+  color: #FF3055;
+  min-height: 14px;
+}
+
+.profile__respons_type_success {
+  color: #29bb59f8;
+}
 @media screen and (max-width: 1279px) {
   .profile__form{
       width: 410px;
